--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="row">
             <div class="input-group mb-3 w-50 mt-4">
-                <input type="text" class="form-control" placeholder="Recipient's username"
+                <input type="text" class="form-control search-input" placeholder="Recipient's username"
                     aria-label="Recipient's username" aria-describedby="button-addon2">
                 <button class="btn btn-primary search-btn" type="button" id="button-addon2">Button</button>
             </div>
